Updated crypto service logic